--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-<!--teste-->
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfólio</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+
+  <header class="header">
+    <img src="img/marca.svg" alt="Lobo">
+    <nav>
+      <ul class="header-menu">
+        <li><a href="#experiencia">Experiência</a></li>
+        <li><a href="#formacao">Formação</a></li>
+        <li><a href="#contato">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main class="introducao">
+
+    <img src="img/perfil.jpg" alt="">
+
+    <div>
+      <h1>Desenvolvedora <br>Front End <br>HTML e CSS</h1>
+      <p>Localizada em Londrina - PR </p>
+    </div>
+  </main>
+
+  <section aria-label="Experiência">
+    <h2 class="subtitulo">Experiência</h2>
+    <div>
+      <p>Desenvolvo pequenos projetos como o Bikcraft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML, CSS e JavaScript.</p>
+    </div>
+  </section>
+
+
+</body>
+
+</html>
