--- a/index.html
+++ b/index.html
@@ -32,10 +32,28 @@
     </div>
   </main>
 
-  <section aria-label="Experiência">
+  <section class="experiencia" id="experiencia" aria-label="Experiência">
     <h2 class="subtitulo">Experiência</h2>
     <div>
-      <p>Desenvolvo pequenos projetos como o Bikcraft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML, CSS e JavaScript.</p>
+      <div>
+        <p class="experiencia-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML, CSS e JavaScript.</p>
+      </div>
+      <div class="empresa">
+        <span class="empresa-ano">2015-2017</span>
+        <h3 class="empresa-titulo">PROPLAN</h3>
+        <p class="empresa-texto">No projeto Bikcraft utilizei<strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. No projeto Bikcraft utilizei<strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. </p>
+        <span class="empresa-ano">2017-2021</span>
+        <h3 class="empresa-titulo">DRZ Consultoria</h3>
+        <p class="empresa-texto">No projeto Bikcraft utilizei<strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. No projeto Bikcraft utilizei<strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. </p>
+        <ul class="habilidades">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>Geoprocessamento</li>
+          <li>QGIS</li>
+          <li>ArcGIS</li>
+        </ul>
+      </div>
     </div>
   </section>
 
