--- a/index.html
+++ b/index.html
@@ -38,20 +38,41 @@
       <div>
         <p class="experiencia-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML, CSS e JavaScript.</p>
       </div>
+
       <div class="empresa">
         <span class="empresa-ano">2015-2017</span>
         <h3 class="empresa-titulo">PROPLAN</h3>
+        <span class="empresa-titulo">Estagiária de Geoprocessamento</span>
         <p class="empresa-texto">No projeto Bikcraft utilizei<strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. No projeto Bikcraft utilizei<strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. </p>
+        <ul class="empresa-habilidades">
+          <li>Geoprocessamento</li>
+          <li>AutoCAD</li>
+          <li>ArcGIS</li>
+        </ul>
+      </div>
+
+      <div class="empresa">
         <span class="empresa-ano">2017-2021</span>
         <h3 class="empresa-titulo">DRZ Consultoria</h3>
-        <p class="empresa-texto">No projeto Bikcraft utilizei<strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. No projeto Bikcraft utilizei<strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. </p>
-        <ul class="habilidades">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
+        <span class="empresa-titulo">Assistente de Geoprocessamento</span>
+        <p class="empresa-texto">No projeto Bikcraft utilizei<strong> HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. No projeto Bikcraft utilizei<strong> HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. </p>
+        <ul class="empresa-habilidades">
           <li>Geoprocessamento</li>
           <li>QGIS</li>
           <li>ArcGIS</li>
+          <li>AutoCAD</li>
+        </ul>
+      </div>
+
+      <div class="empresa">
+        <span class="empresa-ano">2021</span>
+        <h3 class="empresa-titulo">Curso Origamid</h3>
+        <span class="empresa-titulo">Estudante</span>
+        <p class="empresa-texto">No projeto Bikcraft utilizei<strong> HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. No projeto Bikcraft utilizei<strong> HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. </p>
+        <ul class="empresa-habilidades">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
         </ul>
       </div>
     </div>
