--- a/index.html
+++ b/index.html
@@ -78,6 +78,50 @@
     </div>
   </section>
 
+  <section class="formacao" id="formacao" aria-label="formacao">
+    <div class="formacao-container">
+      <h2 class="subtitulo">Formação</h2>
+
+      <div>
+        <p class="formacao-texto">
+          Minha mais recente Experiência acadêmica foi o curso de HTML e CSS para iniciantes, realizado através da plataforma <strong>origamid</strong>. Além disso, realizei cursos através do Youtube, como os do canal <strong>Curso em Vídeo</strong>.
+        </p>
+        <ul class="faculdade-lista">
+          <li class="faculdade">
+            <span class="faculdade-tipo">Bacharel e Licenciatura</span>
+            <h3 class="faculdade-curso">Geografia</h3>
+            <span class="faculdade-instituicao">Universidade Estadual de Londrina</span>
+          </li>
+          <li class="faculdade">
+            <span class="faculdade-tipo">Graduação Sanduíche - CSF</span>
+            <h3 class="faculdade-curso">Ciências e Tecnologia do Meio Ambiente</h3>
+            <span class="faculdade-instituicao">Universidade do Porto - Portugal</span>
+          </li>
+          <li class="faculdade">
+            <span class="faculdade-tipo">Graduação Sanduíche - CSF</span>
+            <h3 class="faculdade-curso">Ciências e Tecnologia do Meio Ambiente</h3>
+            <span class="faculdade-instituicao">Universidade do Porto - Portugal</span>
+          </li>
+        </ul>
+
+        <div class="formacao-extra">
+          <div class="cursos">
+            <h3>Cursos Intensivos</h3>
+            <ul>
+              <li>HTML e CSS para iniciantes <span>72h</span></li>
+              <li>CSS Flexbox <span>6h</span></li>
+            </ul>
+
+            <div class="idiomas">
+              <h3>Idiomas</h3>
+              <ul>
+                <li>Inglês <span>Intermediário</span></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+  </section>
+
 
 </body>
 
