--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfólio</title>
+  <meta name="description" content="Desenvolvedora e geógrafa localizada em Londrina-PR">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -24,7 +25,7 @@
 
   <main class="introducao">
 
-    <img src="img/perfil.jpg" alt="">
+    <img src="img/perfil.jpg" alt="Lobo cinza" width="360px" height="520px">
 
     <div>
       <h1>Desenvolvedora <br>Front End <br>HTML e CSS</h1>
@@ -122,6 +123,20 @@
         </div>
   </section>
 
+  <footer class="footer" id="contato">
+    <div class="footer-container">
+      <p class="footer-texto"> Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma conversa.
+      </p>
+      <ul class="footer-contato">
+        <li>renatatambani@gmail.com</li>
+        <li>+55 43 9999-9999</li>
+        <li> <a href="https://www.instagram.com/renatatambani/" target="_blank">Instagram</a></li>
+      </ul>
+      <p class="footer-copy">Renata Tambani. Alguns direitos reservados</p>
+
+    </div>
+
+  </footer>
 
 </body>
 
